fix(ea): layout and general issues (#5459)
* fix(ea): report dialog height

* fix(ea): legal translations

* fix(ea): make footer links dynamic

* fix(ea): add z-index to prevent medias accordion overlap

* fix(ea): fix uneven medias embed padding

* fix(ea): padding, z-index preview

* fix(ea): fix mobile sticky preview behavior

* fix(ea): remove debounce from scroll listener

* fix(ea): provide missing translocoTestingModule for appcomponent

* fix(ea): bottom scroll offset

* fix(ea): dynamic scroll offset

---------

--- a/apps/ea/src/styles.scss
+++ b/apps/ea/src/styles.scss
@@ -87,7 +87,7 @@ engineering-app {
 
   // styles for the dialog overlay
   .app-overlay-container {
-    @apply top-0 left-0 h-full w-full fixed pointer-events-none;
+    @apply top-0 left-0 h-full w-full fixed pointer-events-none z-50;
   }
 
   .app-overlay-container:empty {
@@ -111,6 +111,10 @@ engineering-app {
 
     mat-dialog-container {
       @apply overflow-y-hidden rounded-b-none #{!important};
+    }
+
+    mat-dialog-content {
+      @apply max-h-none h-[calc(100%-156px)];
     }
   }
 }
